--- a/themes/hugo-academic/i18n/en.yaml
+++ b/themes/hugo-academic/i18n/en.yaml
@@ -48,6 +48,12 @@
 
 - id: btn_poster
   translation: Poster
+  
+- id: btn_dashboard
+  translation: Dashboard
+
+- id: btn_app
+  translation: App
 
 - id: btn_source
   translation: Source Document
